# freenect-rs

./: .gitmodules  Cargo.toml  README.md
examples/: kinect_live.rs
examples/glwinhelp/: imgwin.rs  mod.rs
glwinhelp/: Cargo.toml  README.md
glwinhelp/src/: headwin.rs  imgwin.rs  lib.rs  loadobj.rs
src/: freenect.rs  freenect_ffi.rs  lib.rs
