[package]
name = "freenectrs"
version = "0.1.0"
authors = ["Entscheider"]
description = "A rust wrapper for libfreenect"
license = "Apache-2.0"
categories = ["api-bindings"]
repository = "https://github.com/Entscheider/freenect-rs"
documentation = "https://docs.rs/freenectrs"

edition = "2018"

[dependencies]
libc = "0.2"

[[example]]
name="kinect_live"
path="examples/kinect_live.rs"

[dev-dependencies]
image = "0.23"
glium = "0.27"
